--- a/Projektna/Spletno/css/style.css
+++ b/Projektna/Spletno/css/style.css
@@ -2,11 +2,12 @@ body {
     background: #e9e9e9;
     font: 18px Arial, sans-serif;
 }
-#zemljevid {
+.zemljevid {
 	margin-top: 20px;
 	margin-bottom: 20px;
 	border-style: solid;
 	text-align: center;
+	position: relative;
 }
 
 .topnav {
@@ -61,3 +62,4 @@ body {
 .topnav .login-container button:hover {
   background-color: green;
 }
+
